fixed scroll but on firefox

--- a/src/styles/listview.css
+++ b/src/styles/listview.css
@@ -22,6 +22,12 @@
   padding-bottom: 100px;
   padding: 30px 0px 100px 0px;
   max-width: 400px;
+  overflow-y: scroll;
+}
+
+/* needed because having two different scrolls creates all kind of troubles between chrome and firefox */
+.list-view::-webkit-scrollbar, .list-view-container::-webkit-scrollbar {
+  display: none;
 }
 
 .list-view > li {
